# gtc

./: index.html  setup.cfg
.devcontainer/: devcontainer.json
cpputil/unstructured/: CMakeLists.txt
cpputil/unstructured/include/gridtools/next/: atlas_array_view_adapter.hpp  cuda_util.hpp  domain.hpp  tmp_storage.hpp  unstructured.hpp  usid_cuda_helpers.hpp  usid_helpers.hpp  usid_naive_helpers.hpp
cpputil/unstructured/tests/regression/fvm_nabla/: CMakeLists.txt  driver.cc  driver.cu  driver.hpp  nabla_cuda.hpp  nabla_naive.hpp
cpputil/unstructured/tests/unit_tests/next/: CMakeLists.txt
cpputil/usid/: CMakeLists.txt
cpputil/usid/include/gridtools/usid/: helpers.hpp
cpputil/usid/tests/: CMakeLists.txt  nabla_cuda.cu  nabla_cuda.hpp  nabla_naive.cpp  nabla_naive.hpp
docs/branches/gh-pages-deploy/gt_frontend/: apiref.html  genindex.html  index.html  license.html  py-modindex.html  search.html
docs/branches/gh-pages-deploy/gt_frontend/_modules/: index.html
docs/branches/gh-pages-deploy/gt_frontend/_modules/gt_frontend/: ast_node_matcher.html  built_in_types.html  frontend.html  gtscript.html  gtscript_ast.html  gtscript_to_gtir.html  py_to_gtscript.html
docs/branches/gh-pages-deploy/gt_frontend/_source/: gt_frontend.html  modules.html
docs/branches/gh-pages-deploy/gtc/_modules/eve/: codegen.html
docs/branches/gh-pages-deploy/gtc/_source/: gtc.html  gtc.structured.html  gtc.unstructured.html
docs/gt_frontend/: language_reference.rst
docs/latest/eve/: apiref.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/latest/eve/_modules/: index.html
docs/latest/eve/_modules/eve/: codegen.html  concepts.html  exceptions.html  iterators.html  traits.html  tree_utils.html  type_definitions.html  utils.html  visitors.html
docs/latest/eve/_source/: eve.html  modules.html
docs/latest/eve/_sources/_source/: eve.rst.txt
docs/latest/gt_frontend/: genindex.html  objects.inv  searchindex.js
docs/latest/gt_frontend/_modules/gt_frontend/: py_to_gtscript.html
docs/latest/gt_frontend/_source/: gt_frontend.html
docs/latest/gtc/: genindex.html  objects.inv  searchindex.js
docs/latest/gtc/_modules/eve/: codegen.html
docs/latest/gtc/_modules/gtc/unstructured/: gtir_to_nir.html  nir_to_usid.html  sir_to_naive.html  usid_codegen.html
docs/latest/gtc/_modules/gtc/unstructured/nir_passes/: field_dependency_graph.html
docs/latest/gtc/_source/: gtc.html  gtc.unstructured.html  gtc.unstructured.nir_passes.html  gtc.unstructured.sir_passes.html
examples/eve/workshop-2020-10/: test_workshop_examples.py
examples/eve/workshop-2020-10/solution/: day1.ipynb  day2.ipynb  generated.hpp  hir.py  lir.py
examples/eve/workshop-2020-10/template/: day1.ipynb  day2.ipynb  defs.hpp  driver.cc  lir.py
src/eve/: __init__.py  _typing.py  codegen.py  concepts.py  exceptions.py  iterators.py  traits.py  tree_utils.py  type_definitions.py  typing.py  utils.py  visitors.py
src/gt_frontend/: built_in_types.py  gtscript.py  py_to_gtscript.py
src/gtc/unstructured/: frontend.py  gtir2.py  gtir_to_nir.py  gtir_to_usid2.py  gtscript_ast2.py  nir_to_usid.py  py_to_gtir2.py  py_to_gtscript2.py  sir_to_naive.py  usid2.py  usid2_codegen.py  usid_codegen.py
src/gtc/unstructured/gtir_passes2/: merge_stencils.py  rename_location.py
src/gtc/unstructured/nir_passes/: field_dependency_graph.py
tests/tests_eve/: common.py
tests/tests_eve/unit_tests/: test_concepts.py  test_iterators.py  test_type_definitions.py  test_utils.py
tests/tests_gtc/: test_nir_field_dependency_graph.py
tests/tests_gtc/regression/cpp/: CMakeLists.txt
tests/tests_gtc/regression/cpp2/: CMakeLists.txt  fvm_nabla.py  fvm_nabla_naive.cpp
